--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -537,7 +537,8 @@
             <StackPanel Orientation="Horizontal">
                 <Slider Value="{Binding Value, Mode=TwoWay}"
                         Minimum="{Binding MinValue}" Maximum="{Binding MaxValue}" SmallChange="{Binding StepValue}"
-                        MinWidth="150" Margin="0,0,5,0" VerticalAlignment="Center" />
+                        MinWidth="150" Margin="0,0,5,0" VerticalAlignment="Center"
+                        IsMoveToPointEnabled="True" />
                 <TextBlock Text="{Binding FormattedValue}" MinWidth="50" VerticalAlignment="Center" />
             </StackPanel>
         </DataTemplate>
